Fix spacing after title

--- a/src/styles/stack.css
+++ b/src/styles/stack.css
@@ -21,7 +21,3 @@
 .stack-small h1 + .meta, .stack-small h2 + .meta, .stack-small h3 + .meta, .stack-small h4 + .meta, .stack-small h5 + .meta, .stack-small h6 + .meta {
   --space: .2rem;
 }
-
-.stack > .meta + p {
-  --space: .5rem;
-}
